samples/_failures_safe/1761340481_3226ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28f7d329.c: In function ‘parser_init’:
./samples/SAFE/__tmp_28f7d329.c:152:51: error: expected ‘)’ at end of input
  152 |     parser->current_token = lexer_next_token(lexer
      |                                             ~     ^
      |                                                   )
./samples/SAFE/__tmp_28f7d329.c:152:5: error: expected declaration or statement at end of input
  152 |     parser->current_token = lexer_next_token(lexer
      |     ^~~~~~
